tests/semantic/invalid/return_in_void.src
fn void_function() -> void {
    return 42;
}
